# llm-sanitizer

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/instructions/: release-workflow.instructions.md
.github/obo_sessions/: index.json  session_20260420_211325.json  session_20260420_213858.json
.github/prompts/: publish.prompt.md
.github/workflows/: publish.yml
docs/: DESIGN_SPEC.md  LinkedIn_Annoucment.md
src/llm_sanitizer/: __init__.py  cli.py  config.py  models.py  redactor.py  scanner.py  server.py
src/llm_sanitizer/formatters/: __init__.py  json_format.py  markdown_format.py  sarif_format.py
src/llm_sanitizer/readers/: __init__.py  binary_reader.py  text_reader.py  url_reader.py
src/llm_sanitizer/rules/: __init__.py  agent_config.py  base64_encoded.py  comment_directive.py  data_exfil.py  hidden_content.py  homoglyph.py  instruction_override.py  role_play.py  system_prompt.py  zero_width.py
tests/: conftest.py  test_cli.py  test_models.py  test_readers.py  test_red_team.py  test_redactor.py  test_scanner.py  test_smoke.py
tests/fixtures/: clean_document.md  hidden_instructions.html  injected_document.md
tests/fixtures/red_team/: multi_vector.md
tests/helpers/: __init__.py  attack_corpus.py  mock_llm.py
tests/test_formatters/: test_formatters.py
tests/test_rules/: test_agent_config.py  test_base64_encoded.py  test_comment_directive.py  test_data_exfil.py  test_hidden_content.py  test_homoglyph.py  test_instruction_override.py  test_role_play.py  test_system_prompt.py  test_zero_width.py
